# Bhavishyavani

./: Alankar- Create business case.txt  Deployment.docx  Food Actual data.xlsx  Footfall.csv  README copy.md  README.md  Untitled13 (1).ipynb  cmd.sh  footfall_prediction_model.pkl  main.py  package-lock.json  predict_model.py  requirements.txt  untitled13.py
backend/: ._classifier.pkl  .gitignore  Untitled.ipynb  asset-manifest.json  index.html  main.py  predict_model.py  pyproject.toml
backend/static/js/: main.52ec3dab.js  main.52ec3dab.js.map
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/services/: api.js
